Favicon url normalization